fix: update loading button example

--- a/docs/src/content/docs/Components/button.mdx
+++ b/docs/src/content/docs/Components/button.mdx
@@ -147,11 +147,11 @@ A button that shows a loading indicator.
 <Preview src="button?style=loading">
 
 ```dart
-Button.ghost(
+Button.outline(
   label: 'Primary',
   isLoading: true,
   onPressed: () {},
-),
+)
 ```
 
 </Preview>
