--- a/docs/src/content/docs/Components/badge.mdx
+++ b/docs/src/content/docs/Components/badge.mdx
@@ -181,17 +181,17 @@ const Badges(
 ## Properties
 
 <div class="docs-table">
-| Property           | Type                  | Description                                                                 |
-|--------------------|-----------------------|-----------------------------------------------------------------------------|
-| `label`            | `String`              | **Required.** The text to display in the badge.                             |
-| `padding`          | `EdgeInsetsGeometry?` | Custom padding for the badge content. Default: horizontal: 8, vertical: 5   |
-| `offset`           | `Offset?`             | Position offset for the badge when used with a child widget.                |
-| `backgroundColor`  | `Color?`              | Custom background color. If not provided, uses the type's default color.    |
-| `textColor`        | `Color?`              | Custom text color. If not provided, uses the type's default color.          |
-| `textStyle`        | `TextStyle?`          | Custom text style.                                                          |
-| `alignment`        | `AlignmentGeometry?`  | Alignment of the badge when used with a child widget.                       |
-| `child`            | `Widget?`             | Optional child widget that the badge will be attached to.                   |
-| `icon`             | `Widget?`             | Optional icon to display before the label text.                             |
-| `type`             | `BadgeType`           | Type of badge (basic, success, warning, error, info). Default: basic        |
-
+| Property                | Type                    | Description                                                                 |
+|-------------------------|-------------------------|-----------------------------------------------------------------------------|
+| `label`                 | `String`                | **Required.** The text to display in the badge.                             |
+| `padding`               | `EdgeInsetsGeometry?`   | Custom padding for the badge content. Default: horizontal: 8, vertical: 5   |
+| `offset`                | `Offset?`               | Position offset for the badge when used with a child widget.                |
+| `backgroundColor`       | `Color?`                | Custom background color. If not provided, uses the type's default color.    |
+| `textColor`             | `Color?`                | Custom text color. If not provided, uses the type's default color.          |
+| `textStyle`             | `TextStyle?`            | Custom text style.                                                          |
+| `alignment`             | `AlignmentGeometry?`    | Alignment of the badge when used with a child widget.                       |
+| `child`                 | `Widget?`               | Optional child widget that the badge will be attached to.                   |
+| `icon`                  | `Widget?`               | Optional icon to display before the label text.                             |
+| `type`                  | `BadgeType`             | Type of badge (basic, success, warning, error, info). Default: basic        |
+| `notificationBadgeSize` | `NotificationBadgeSize` | Type of NotificationBadgeSize (small, medium, large). Default: medium       |
 </div>
