fix: remove default column in properties table

--- a/docs/src/content/docs/Components/progress.mdx
+++ b/docs/src/content/docs/Components/progress.mdx
@@ -226,20 +226,20 @@ Progress(
 ## Properties
 
 <div class="docs-table">
-| Property              | Type                     | Default                          | Description                                                                 |
-|-----------------------|--------------------------|----------------------------------|-----------------------------------------------------------------------------|
-| `value`               | `double`                 | **Required**                     | The progress value as a percentage (0-100).                                 |
-| `label`               | `String?`                | `undefined`                      | The primary label displayed alongside the progress bar.                     |
-| `secondaryLabel`      | `String?`                | `undefined`                      | The secondary label displayed alongside the progress bar.                   |
-| `backgroundColor`     | `Color?`                 | `context.color.bgMuted`          | The background color of the progress bar.                                   |
-| `color`               | `Color?`                 | `context.color.accentModerate`   | The color of the progress indicator.                                        |
-| `valueColor`          | `Animation<Color?>?`     | `undefined`                      | The animation for the progress indicator color.                             |
-| `minHeight`           | `double`                 | `8`                              | The minimum height of the progress bar.                                     |
-| `borderRadius`        | `BorderRadiusGeometry?`  | `BorderRadius.circular(999)`     | The border radius of the progress bar.                                      |
-| `stopIndicatorColor`  | `Color?`                 | `undefined`                      | The color of the stop indicator.                                            |
-| `stopIndicatorRadius` | `double?`                | `undefined`                      | The radius of the stop indicator.                                           |
-| `trackGap`            | `double?`                | `undefined`                      | The gap between the progress track and the stop indicator.                  |
-| `verticalPadding`     | `double`                 | `24`                             | The vertical padding around the progress bar.                               |
-| `alignment`           | `AlignmentGeometry`      | `Alignment.bottomLeft`           | The alignment of the progress bar and labels.                               |
+| Property              | Type                     | Description                                                                 |
+|-----------------------|--------------------------|-----------------------------------------------------------------------------|
+| `value`               | `double`                 | The progress value as a percentage (0-100).                                 |
+| `label`               | `String?`                | The primary label displayed alongside the progress bar.                     |
+| `secondaryLabel`      | `String?`                | The secondary label displayed alongside the progress bar.                   |
+| `backgroundColor`     | `Color?`                 | The background color of the progress bar.                                   |
+| `color`               | `Color?`                 | The color of the progress indicator.                                        |
+| `valueColor`          | `Animation<Color?>?`     | The animation for the progress indicator color.                             |
+| `minHeight`           | `double`                 | The minimum height of the progress bar.                                     |
+| `borderRadius`        | `BorderRadiusGeometry?`  | The border radius of the progress bar.                                      |
+| `stopIndicatorColor`  | `Color?`                 | The color of the stop indicator.                                            |
+| `stopIndicatorRadius` | `double?`                | The radius of the stop indicator.                                           |
+| `trackGap`            | `double?`                | The gap between the progress track and the stop indicator.                  |
+| `verticalPadding`     | `double`                 | The vertical padding around the progress bar.                               |
+| `alignment`           | `AlignmentGeometry`      | The alignment of the progress bar and labels.                               |
 
 </div>
