--- a/docs/src/content/docs/Components/widget-ratio.mdx
+++ b/docs/src/content/docs/Components/widget-ratio.mdx
@@ -275,12 +275,12 @@ WidgetRatio(
 ## Properties
 
 <div class="docs-table">
-| Property       | Type               | Default             | Description                                                    |
-|----------------|-------------------|---------------------|----------------------------------------------------------------|
-| `ratio`        | `double`          | **Required**        | The aspect ratio to enforce (width / height)                   |
-| `child`        | `Widget`          | **Required**        | The widget to size according to the specified aspect ratio     |
-| `clipBehavior` | `Clip`            | `Clip.none`         | How to clip the child content                                 |
-| `borderRadius` | `BorderRadiusGeometry?` | `null`        | The border radius to apply to the widget                      |
+| Property       | Type                    | Description                                                    |
+|----------------|-------------------------|----------------------------------------------------------------|
+| `ratio`        | `double`                | The aspect ratio to enforce (width / height)                   |
+| `child`        | `Widget`                | The widget to size according to the specified aspect ratio     |
+| `clipBehavior` | `Clip`                  | How to clip the child content                                  |
+| `borderRadius` | `BorderRadiusGeometry?` | The border radius to apply to the widget                       |
 </div>
 
 ## Usage Guidelines
