feat: add Circle Progress component

--- a/docs/src/content/docs/Components/progress.mdx
+++ b/docs/src/content/docs/Components/progress.mdx
@@ -34,6 +34,37 @@ Progress(
 
 ---
 
+#### Circle Progress Bar
+A simple circle progress bar without labels.
+
+<Preview src="progress?style=circle">
+
+```dart
+Progress.circle(
+  value: 15,
+)
+```
+
+</Preview>
+
+---
+
+#### Circle With Label
+A simple circle progress bar with labels.
+
+<Preview src="progress?style=circleLabel">
+
+```dart
+Progress.circle(
+  value: 15,
+  label: '10%',
+)
+```
+
+</Preview>
+
+---
+
 #### Bottom-Left Label
 A progress bar with the label aligned to the bottom-left.
 
