docs: update variant description

--- a/docs/src/content/docs/Components/search-field.mdx
+++ b/docs/src/content/docs/Components/search-field.mdx
@@ -15,7 +15,7 @@ The `SearchField` component is built on top of `InputField` and offers additiona
 
 ## Variants
 
-#### With Container (Default)
+#### With Container
 Basic search field with a container background and microphone icon.
 
 <Preview src="search-field?style=withContainer">
