fix: correct preview source paths in Page Control documentation

--- a/docs/src/content/docs/Components/page_control.mdx
+++ b/docs/src/content/docs/Components/page_control.mdx
@@ -21,7 +21,7 @@ A customizable page indicator component that displays the current position withi
 #### Dot Style
 Classic dot-style page indicators.
 
-<Preview src="page_control?style=dot">
+<Preview src="page-control?style=dot">
 
 ```dart
 PageControl(
@@ -37,7 +37,7 @@ PageControl(
 #### Bar Style
 Modern bar-style page indicators.
 
-<Preview src="page_control?style=bar">
+<Preview src="page-control?style=bar">
 
 ```dart
 PageControl.bar(
@@ -53,7 +53,7 @@ PageControl.bar(
 #### Dot Style on Image
 Dot indicators optimized for image backgrounds.
 
-<Preview src="page_control?style=dotOnImage">
+<Preview src="page-control?style=dotOnImage">
 
 ```dart
 PageControl(
@@ -71,7 +71,7 @@ PageControl(
 #### Bar Style on Image
 Bar indicators optimized for image backgrounds.
 
-<Preview src="page_control?style=barOnImage">
+<Preview src="page-control?style=barOnImage">
 
 ```dart
 PageControl.bar(
