fix: rename component

--- a/docs/src/content/docs/Components/tooltip.mdx
+++ b/docs/src/content/docs/Components/tooltip.mdx
@@ -1,5 +1,5 @@
 ---
-title: Quick Tip
+title: Tooltip
 sidebar:
   order: 10
 ---
@@ -22,7 +22,7 @@ The `QuickTip` widget provides a flexible way to show additional information or 
 #### Default (Up)
 Basic tooltip that appears above the trigger widget.
 
-<Preview src="quick-tip?style=up">
+<Preview src="tooltip?style=up">
 
 ```dart
 QuickTip(
@@ -38,7 +38,7 @@ QuickTip(
 #### Down Direction
 Tooltip that appears below the trigger widget.
 
-<Preview src="quick-tip?style=down">
+<Preview src="tooltip?style=down">
 
 ```dart
 QuickTip(
@@ -55,7 +55,7 @@ QuickTip(
 #### Left Direction
 Tooltip that appears to the left of the trigger widget.
 
-<Preview src="quick-tip?style=left">
+<Preview src="tooltip?style=left">
 
 ```dart
 QuickTip(
@@ -72,7 +72,7 @@ QuickTip(
 #### Right Direction
 Tooltip that appears to the right of the trigger widget.
 
-<Preview src="quick-tip?style=right">
+<Preview src="tooltip?style=right">
 
 ```dart
 QuickTip(
@@ -89,7 +89,7 @@ QuickTip(
 #### No Tail
 Tooltip without the pointing tail.
 
-<Preview src="quick-tip?style=noTail">
+<Preview src="tooltip?style=noTail">
 
 ```dart
 QuickTip(
@@ -106,7 +106,7 @@ QuickTip(
 #### Custom Content
 Tooltip with custom widget content instead of text.
 
-<Preview src="quick-tip?style=customContent">
+<Preview src="tooltip?style=customContent">
 
 ```dart
 QuickTip(
