fix: update Badges usage to Badges.count

--- a/docs/src/content/docs/Components/nav-bar.mdx
+++ b/docs/src/content/docs/Components/nav-bar.mdx
@@ -87,7 +87,7 @@ NavBar(
       label: 'Home',
     ),
     BottomNavItem(
-      icon: Badges(
+      icon: Badges.count(
         label: '1',
         type: BadgeType.notification,
         textStyle: TextStyle(
@@ -122,7 +122,7 @@ NavBar(
       label: 'Home',
     ),
     BottomNavItem(
-      icon: Badges(
+      icon: Badges.count(
         label: '1',
         type: BadgeType.notification,
         notificationBadgeSize: NotificationBadgeSize.small,
