feat: add TextArea component

--- a/docs/src/content/docs/Components/input-field.mdx
+++ b/docs/src/content/docs/Components/input-field.mdx
@@ -134,6 +134,7 @@ const InputField(
 | `autofocus`          | `bool`                                 | When true, the text field will be focused when the widget is first created.                     |
 | `labelText`          | `String?`                              | Text displayed as a floating label above the text field when focused or filled.                 |
 | `hintText`           | `String?`                              | Placeholder text displayed when the text field is empty.                                        |
+| `hintStyle`          | `TextStyle?`                           | Style for the hint text when the text field is empty.                                           |
 | `textInputType`      | `TextInputType?`                       | The type of keyboard to use for editing the text (e.g., email, number, phone).                  |
 | `onSubmitied`        | `ValueChanged<String>?`                | Callback function when the user submits the text field (e.g., presses done/next).               |
 | `validator`          | `String? Function(String?)?`           | Function that validates the text and returns an error message string if invalid.                |
